--- a/choro.html
+++ b/choro.html
@@ -116,7 +116,7 @@
 
         <div class="section">
             <h2>その他</h2>
-            <p>[その他、好きなゲームジャンル、配信スケジュール、連絡先、目標など、自由に記載してください。]</p>
+            <p>valrant, RocketReague, LoLなどもやっています</p>
         </div>
     </div>
 </body>
