--- a/choro.html
+++ b/choro.html
@@ -110,8 +110,7 @@
                 <li><strong>YouTube:</strong> <a href="https://www.youtube.com/@choro727" target="_blank">@choro727</a></li>
                 <li><strong>X (旧 Twitter):</strong> <a href="https://x.com/sukesuke_ace" target="_blank">@sukesuke_ace</a></li>
                 <li><strong>Twitch:</strong> <a href="https://www.twitch.tv/choro7777" target="_blank">choro7777</a></li>
-                <li><strong>Discord:</strong>choro7</li>
-            </ul>
+                <li><strong>Discord:</strong> <a href="https://discord.com/users/choro7" target="_blank">choro7</a></li>
         </div>
 
         <div class="section">
