--- a/choro.html
+++ b/choro.html
@@ -64,14 +64,14 @@
             background-color: #333;
         }
         a {
-            color: #FF69B4;
-            text-decoration: none;
+            color: #6495ED;
+            text-decoration: underline;
             font-weight: bold;
             transition: color 0.3s ease;
         }
         a:hover {
             color: #ffffff;
-            text-decoration: none;
+            text-decoration: underline;
         }
         .section {
             margin-bottom: 40px;
@@ -80,10 +80,10 @@
             display: flex;
             align-items: center;
         }
-        .social-links strong {
+        .social-label {
             color: #FF69B4;
-            min-width: 150px;
-            display: inline-block;
+            font-weight: bold;
+            min-width: 150px; /* Align labels */
         }
     </style>
 </head>
@@ -106,16 +106,17 @@
         <div class="section">
             <h2>SNS / ゲームID</h2>
             <ul class="social-links">
-                <li><strong>Nintendo Switch:</strong>SW-6071-3342-3932</li>
-                <li><strong>YouTube:</strong> <a href="https://www.youtube.com/@choro727" target="_blank">@choro727</a></li>
-                <li><strong>X (旧 Twitter):</strong> <a href="https://x.com/sukesuke_ace" target="_blank">@sukesuke_ace</a></li>
-                <li><strong>Twitch:</strong> <a href="https://www.twitch.tv/choro7777" target="_blank">choro7777</a></li>
-                <li><strong>Discord:</strong> <a href="https://discord.com/users/choro7" target="_blank">choro7</a></li>
+                <li><span class="social-label">Nintendo Switch:</span>SW-6071-3342-3932</li>
+                <li><span class="social-label">YouTube:</span> <a href="https://www.youtube.com/@choro727" target="_blank">@choro727</a></li>
+                <li><span class="social-label">X:</span> <a href="https://x.com/sukesuke_ace" target="_blank">@sukesuke_ace</a></li>
+                <li><span class="social-label">Twitch:</span> <a href="https://www.twitch.tv/choro7777" target="_blank">choro7777</a></li>
+                <li><span class="social-label">Discord:</span> <a href="https://discord.com/users/choro7" target="_blank">choro7</a></li>
+            </ul>
         </div>
 
         <div class="section">
             <h2>その他</h2>
-            <p>valrant, RocketReague, LoLなどもやっています</p>
+            <p>valorant, RocketReague, LoLなどもやっています</p>
         </div>
     </div>
 </body>
