--- a/choro.html
+++ b/choro.html
@@ -102,6 +102,24 @@
             height: auto;
             margin-right: 10px;
         }
+        textarea {
+            width: calc(100% - 20px); /* Adjust width to account for padding */
+            padding: 10px;
+            margin-top: 10px;
+            border-radius: 8px;
+            background-color: #2a2a2a;
+            color: #e0e0e0;
+            border: 1px solid #00FFFF;
+            font-family: 'Orbitron', sans-serif;
+            font-size: 1em;
+            line-height: 1.5;
+            resize: vertical; /* Allow vertical resizing */
+        }
+        textarea:focus {
+            outline: none;
+            border-color: #6495ED;
+            box-shadow: 0 0 8px rgba(100, 149, 237, 0.5);
+        }
     </style>
 </head>
 <body>
@@ -110,7 +128,10 @@
 
         <div class="section">
             <h2>自己紹介</h2>
-            <p>マリオテニスエースからガチ勢ですフィーバーも楽しみます</p>
+            <textarea id="introduction" rows="4" cols="50">
+マリオテニスエースからガチ勢です
+フィーバーも楽しみます!!
+            </textarea>
         </div>
 
         <div class="section">
@@ -133,7 +154,7 @@
 
         <div class="section">
             <h2>その他</h2>
-            <p>valorant, RocketReague, LoLなどもやっています</p>
+            <textarea id="other_info" rows="4" cols="50">valorant, RocketReague, LoLなどもやっています</textarea>
         </div>
     </div>
 </body>
