--- a/choro.html
+++ b/choro.html
@@ -102,23 +102,8 @@
             height: auto;
             margin-right: 10px;
         }
-        textarea {
-            width: calc(100% - 20px); /* Adjust width to account for padding */
-            padding: 10px;
-            margin-top: 10px;
-            border-radius: 8px;
-            background-color: #2a2a2a;
-            color: #e0e0e0;
-            border: 1px solid #00FFFF;
-            font-family: 'Orbitron', sans-serif;
-            font-size: 1em;
-            line-height: 1.5;
-            resize: vertical; /* Allow vertical resizing */
-        }
-        textarea:focus {
-            outline: none;
-            border-color: #6495ED;
-            box-shadow: 0 0 8px rgba(100, 149, 237, 0.5);
+        .multiline-text {
+            white-space: pre-wrap;
         }
     </style>
 </head>
@@ -128,10 +113,10 @@
 
         <div class="section">
             <h2>自己紹介</h2>
-            <textarea id="introduction" rows="4" cols="50">
+            <p class="multiline-text">
 マリオテニスエースからガチ勢です
 フィーバーも楽しみます!!
-            </textarea>
+            </p>
         </div>
 
         <div class="section">
@@ -154,7 +139,7 @@
 
         <div class="section">
             <h2>その他</h2>
-            <textarea id="other_info" rows="4" cols="50">valorant, RocketReague, LoLなどもやっています</textarea>
+            <p class="multiline-text">valorant, RocketReague, LoLなどもやっています</p>
         </div>
     </div>
 </body>
