--- a/choro.html
+++ b/choro.html
@@ -33,7 +33,7 @@
             justify-content: center;
             align-items: center;
             min-height: 100vh;
-            overflow: hidden;
+            overflow-x: hidden;
             animation: aurora-sky-animation 30s linear infinite alternate; /* Slower animation */
         }
 
