--- a/choro.html
+++ b/choro.html
@@ -151,12 +151,50 @@
         .multiline-text {
             white-space: pre-wrap;
         }
+
+        @media (max-width: 768px) {
+            body {
+                padding: 10px; /* Reduced further */
+                overflow: hidden; /* Prevent scrolling on mobile */
+                line-height: 1.5; /* Reduced line height */
+            }
+            .container {
+                padding: 15px; /* Reduced further */
+            }
+            h1 {
+                font-size: 1.6em; /* Reduced further */
+                margin-bottom: 8px;
+            }
+            h2 {
+                font-size: 1.1em; /* Reduced further */
+                margin-top: 10px;
+                margin-bottom: 8px;
+                padding-bottom: 4px;
+            }
+            .section {
+                margin-bottom: 10px; /* Reduced further */
+            }
+            ul li {
+                padding: 6px; /* Reduced further */
+                margin-bottom: 6px;
+                font-size: 0.85em; /* Reduced further */
+            }
+            .social-label {
+                min-width: 80px; /* Adjusted for smaller screens */
+            }
+            .social-links img {
+                width: 20px; /* Reduced icon size */
+            }
+            #copy-switch-id {
+                padding: 2px 6px;
+                font-size: 0.8em;
+            }
+        }
     </style>
 </head>
 <body>
     <div class="container">
         <h1>ちょろ</h1>
-
         <div class="section">
             <h2>自己紹介</h2>
             <p class="multiline-text">
@@ -164,14 +202,12 @@
 フィーバーも楽しみます!!
             </p>
         </div>
-
         <div class="section">
             <h2>実績</h2>
             <ul>
                 <li>マリオテニスエース公式全国大会Best4</li>
             </ul>
         </div>
-
         <div class="section">
             <h2>SNS / ゲームID</h2>
             <ul class="social-links">
