--- a/choro.html
+++ b/choro.html
@@ -180,14 +180,18 @@
                 font-size: 0.85em; /* Reduced further */
             }
             .social-label {
-                min-width: 80px; /* Adjusted for smaller screens */
+                min-width: 60px; /* Further reduced */
             }
             .social-links img {
                 width: 20px; /* Reduced icon size */
             }
+            #switch-id-text {
+                white-space: nowrap; /* Ensure friend code stays on one line */
+            }
             #copy-switch-id {
-                padding: 2px 6px;
-                font-size: 0.8em;
+                padding: 1px 4px; /* Further reduced */
+                font-size: 0.7em; /* Further reduced */
+                margin-left: 5px; /* Reduce margin */
             }
         }
     </style>
@@ -215,7 +219,6 @@
                     <img src="https://choro7.github.io/nfc-html/switch.png" alt="Switch">
                     <span class="social-label">Switch:</span>
                     <span id="switch-id-text">SW-6071-3342-3932</span>
-                    <button id="copy-switch-id" style="margin-left: 15px; background-color: #00FFFF; color: #1e1e1e; border: none; padding: 5px 10px; border-radius: 5px; cursor: pointer;">コピー</button>
                 </li>
                 <li><a href="https://www.youtube.com/@choro727" target="_blank"><img src="https://choro7.github.io/nfc-html/youtube.png" alt="YouTube"><span class="social-label">YouTube:</span>@choro727</a></li>
                 <li><a href="https://x.com/sukesuke_ace" target="_blank"><img src="https://choro7.github.io/nfc-html/X.png" alt="X"><span class="social-label">X:</span>@sukesuke_ace</a></li>
