--- a/choro.html
+++ b/choro.html
@@ -140,248 +140,19 @@
             white-space: pre-wrap;
         }
 
-        @media (max-width: 768px) {
-            body {
-                padding: 10px;
-                line-height: 1.5;
-            }
-            .container {
-                padding: 15px;
-            }
-            h1 {
-                font-size: 1.6em;
-                margin-bottom: 10px;
-            }
-            h2 {
-                font-size: 1.1em;
-                margin-top: 12px;
-                margin-bottom: 10px;
-                padding-bottom: 5px;
-            }
-            .section {
-                margin-bottom: 12px;
-            }
-            ul li {
-                padding: 10px;
-                margin-bottom: 8px;
-                font-size: 0.85em;
-                flex-wrap: wrap;
-            }
-            .social-label {
-                width: 75px; /* Set fixed width for alignment */
-                flex-shrink: 0; /* Prevent label from shrinking */
-                margin-right: 8px;
-            }
-            .social-links img {
-                width: 20px;
-                margin-right: 10px;
-            }
-            #switch-id-text {
-                white-space: normal;
-                word-break: break-all;
-            }
-            #copy-switch-id {
-                padding: 3px 7px;
-                font-size: 0.75em;
-                margin-left: auto; /* Push button to the right */
-            }
-        }
-    </style>
-</head>
-<body>
-    <div class="container">
-        <h1>ちょろ</h1>
-        <div class="section">
-            <h2>自己紹介</h2>
-            <p class="multiline-text">
-マリオテニスエースからガチ勢です
-フィーバーも楽しみます!!
-            </p>
-        </div>
-        <div class="section">
-            <h2>実績</h2>
-            <ul>
-                <li>マリオテニスエース公式全国大会Best4</li>
-            </ul>
-        </div>
-        <div class="section">
-            <h2>SNS / ゲームID</h2>
-            <ul class="social-links">
-                <li>
-                    <img src="https://choro7.github.io/nfc-html/switch.png" alt="Switch">
-                    <span class="social-label">Switch:</span>
-                    <span id="switch-id-text">SW-6071-3342-3932</span>
-                    <button id="copy-switch-id" style="margin-left: 15px; background-color: #00FFFF; color: #1e1e1e; border: none; padding: 5px 10px; border-radius: 5px; cursor: pointer;">コピー</button>
-                </li>
-                <li><a href="https://www.youtube.com/@choro727" target="_blank"><img src="https://choro7.github.io/nfc-html/youtube.png" alt="YouTube"><span class="social-label">YouTube:</span>@choro727</a></li>
-                <li><a href="https://x.com/sukesuke_ace" target="_blank"><img src="https://choro7.github.io/nfc-html/X.png" alt="X"><span class="social-label">X:</span>@sukesuke_ace</a></li>
-                <li><a href="https://www.twitch.tv/choro7777" target="_blank"><img src="https://choro7.github.io/nfc-html/twitch.png" alt="Twitch"><span class="social-label">Twitch:</span>choro7777</a></li>
-                <li><a href="https://discord.com/users/choro7" target="_blank"><img src="https://choro7.github.io/nfc-html/discord.png" alt="Discord"><span class="social-label">Discord:</span>choro7</a></li>
-            </ul>
-        </div>
-
-        <div class="section">
-            <h2>その他</h2>
-            <p class="multiline-text">valorant, RocketReague, LoLなどもやっています</p>
-        </div>
-    </div>
-
-    <script>
-        const copyButton = document.getElementById('copy-switch-id');
-        const textToCopy = document.getElementById('switch-id-text').innerText;
-
-        copyButton.addEventListener('click', () => {
-            navigator.clipboard.writeText(textToCopy).then(() => {
-                copyButton.innerText = 'コピー完了！';
-                setTimeout(() => {
-                    copyButton.innerText = 'コピー';
-                }, 2000);
-            }).catch(err => {
-                console.error('Failed to copy: ', err);
-            });
-        });
-    </script>
-</body>
-</html><!DOCTYPE html>
-<html lang="ja">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Choro's Profile</title>
-    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
-    <style>
-        @keyframes fadeIn {
-            from {
-                opacity: 0;
-                transform: translateY(20px);
-            }
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
-
-        body {
+        #copy-switch-id {
+            margin-left: 15px;
+            background-color: #00FFFF;
+            color: #1e1e1e;
+            border: none;
+            padding: 5px 10px;
+            border-radius: 5px;
+            cursor: pointer;
             font-family: 'Orbitron', sans-serif;
-            line-height: 1.8;
-            margin: 0;
-            padding: 40px 20px;
-            background-color: #0a0a20; /* Deep night blue/purple */
-            background-image: 
-                radial-gradient(at 20% 80%, rgba(0,255,255, 0.15), transparent),
-                radial-gradient(at 80% 20%, rgba(128,0,128, 0.15), transparent),
-                radial-gradient(at 50% 50%, rgba(0,255,0, 0.15), transparent);
-            background-size: 200% 200%;
-            color: #e0e0e0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-            overflow-x: hidden;
-            animation: aurora-sky-animation 30s linear infinite alternate; /* Slower animation */
+            transition: background-color 0.3s ease;
         }
-
-        @keyframes aurora-sky-animation {
-            0% { background-position: 0% 0%, 0% 0%, 0% 0%; }
-            100% { background-position: 100% 100%, 100% 100%, 100% 100%; }
-        }
-        .container {
-            max-width: 800px;
-            width: 100%;
-            background: rgba(30, 30, 30, 0.5); /* Semi-transparent background */
-            backdrop-filter: blur(10px); /* Frosted glass effect */
-            -webkit-backdrop-filter: blur(10px); /* For Safari */
-            padding: 40px;
-            border-radius: 15px;
-            border: 1px solid rgba(0, 255, 255, 0.3); /* Softer border */
-            box-shadow: 0 0 20px rgba(0, 255, 255, 0.1); /* Softer shadow */
-            animation: fadeIn 1s ease-in-out, pulsate 4s ease-in-out infinite;
-        }
-
-        @keyframes pulsate {
-            0% {
-                box-shadow: 0 0 30px rgba(0, 255, 255, 0.2), 0 0 10px rgba(255, 255, 255, 0.1);
-            }
-            50% {
-                box-shadow: 0 0 40px rgba(0, 255, 255, 0.4), 0 0 15px rgba(255, 255, 255, 0.2);
-            }
-            100% {
-                box-shadow: 0 0 30px rgba(0, 255, 255, 0.2), 0 0 10px rgba(255, 255, 255, 0.1);
-            }
-        }
-        h1 {
-            font-weight: 700;
-            font-size: 2.5em;
-            text-align: center;
-            margin-bottom: 20px;
-            color: #00FFFF;
-            animation: text-glow 3s ease-in-out infinite alternate;
-        }
-
-        @keyframes text-glow {
-            from {
-                text-shadow: 0 0 10px rgba(0, 255, 255, 0.7), 0 0 20px rgba(0, 255, 255, 0.7);
-            }
-            to {
-                text-shadow: 0 0 20px rgba(0, 255, 255, 1), 0 0 35px rgba(0, 255, 255, 1);
-            }
-        }
-        h2 {
-            border-bottom: 2px solid #00FFFF;
-            padding-bottom: 10px;
-            margin-top: 30px;
-            margin-bottom: 20px;
-            font-weight: 400;
-            letter-spacing: 1px;
-        }
-        ul {
-            list-style: none;
-            padding: 0;
-        }
-            ul li {
-                background-color: #2a2a2a;
-                margin-bottom: 12px;
-                padding: 15px;
-                border-radius: 8px;
-                border-left: 5px solid #00FFFF;
-                transition: all 0.3s ease;
-                display: flex;
-                align-items: center;
-                box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
-            }
-        ul li:hover {
-            transform: translateY(-5px);
-            background-color: #333;
-            box-shadow: 0 0 15px rgba(0, 255, 255, 0.5);
-        }
-        a {
-            color: #6495ED;
-            text-decoration: none;
-            font-weight: bold;
-            transition: color 0.3s ease;
-            display: flex;
-            align-items: center;
-        }
-        a:hover {
-            color: #ffffff;
-            text-decoration: none;
-        }
-        .section {
-            margin-bottom: 40px;
-            animation: fadeIn 1s ease-in-out;
-        }
-        .social-label {
-            color: #00FFFF;
-            font-weight: bold;
-            min-width: 150px; /* Align labels */
-        }
-        .social-links img {
-            width: 24px;
-            height: auto;
-            margin-right: 10px;
-        }
-        .multiline-text {
-            white-space: pre-wrap;
+        #copy-switch-id:hover {
+            background-color: #00b3b3;
         }
 
         @media (max-width: 768px) {
@@ -427,7 +198,7 @@
             #copy-switch-id {
                 padding: 3px 7px;
                 font-size: 0.75em;
-                margin-left: auto; /* Push button to the right */
+                margin-left: 10px; /* Simple, predictable margin */
             }
         }
     </style>
@@ -455,7 +226,7 @@
                     <img src="https://choro7.github.io/nfc-html/switch.png" alt="Switch">
                     <span class="social-label">Switch:</span>
                     <span id="switch-id-text">SW-6071-3342-3932</span>
-                    <button id="copy-switch-id" style="margin-left: 15px; background-color: #00FFFF; color: #1e1e1e; border: none; padding: 5px 10px; border-radius: 5px; cursor: pointer;">コピー</button>
+                    <button id="copy-switch-id">コピー</button>
                 </li>
                 <li><a href="https://www.youtube.com/@choro727" target="_blank"><img src="https://choro7.github.io/nfc-html/youtube.png" alt="YouTube"><span class="social-label">YouTube:</span>@choro727</a></li>
                 <li><a href="https://x.com/sukesuke_ace" target="_blank"><img src="https://choro7.github.io/nfc-html/X.png" alt="X"><span class="social-label">X:</span>@sukesuke_ace</a></li>
