--- a/choro.html
+++ b/choro.html
@@ -172,7 +172,7 @@
                 padding: 6px 8px; /* Tighter list items */
                 margin-bottom: 5px; /* Tighter list items */
                 font-size: 0.8em; /* Smaller font in lists */
-                flex-wrap: wrap;
+                flex-wrap: nowrap;
             }
             .social-label {
                 width: 65px; /* Further reduced label width */
@@ -185,8 +185,8 @@
                 margin-right: 8px;
             }
             #switch-id-text {
-                white-space: normal;
-                word-break: break-all;
+                white-space: nowrap;
+                font-size: 0.9em;
             }
         }
     </style>
