--- a/choro.html
+++ b/choro.html
@@ -218,7 +218,7 @@
                 <li><a href="https://www.youtube.com/@choro727" target="_blank"><img src="https://choro7.github.io/nfc-html/youtube.png" alt="YouTube"><span class="social-label">YouTube:</span>@choro727</a></li>
                 <li><a href="https://x.com/sukesuke_ace" target="_blank"><img src="https://choro7.github.io/nfc-html/X.png" alt="X"><span class="social-label">X:</span>@sukesuke_ace</a></li>
                 <li><a href="https://www.twitch.tv/choro7777" target="_blank"><img src="https://choro7.github.io/nfc-html/twitch.png" alt="Twitch"><span class="social-label">Twitch:</span>choro7777</a></li>
-                <li><a href="https://discord.com/users/choro7" target="_blank"><img src="https://choro7.github.io/nfc-html/discord.png" alt="Discord"><span class="social-label">Discord:</span>choro7</a></li>
+                <li><a href="https://discord.com/users/359282933338734592" target="_blank"><img src="https://choro7.github.io/nfc-html/discord.png" alt="Discord"><span class="social-label">Discord:</span>choro7</a></li>
             </ul>
         </div>
 
